--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
         <text x="25" y="80" class="cardback" stroke="black" stroke-width="3" fill="grey">?</text>
     </svg>
 
+    <svg width="100" height="100">
+    </svg>
 
 </body>
 </html>
