--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
     
-    <h3>Player 1 Score: <span id="p1Result"></span></h3>
-    <h3>Player 2 Score: <span id="p2Result"></span></h3>
+    <h3>Player 1 Score: <span id="p1Score"></span></h3>
+    <h3>Player 2 Score: <span id="p2Score"></span></h3>
 
     <div class="grid">
      
